# splurge-tabular

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.cursor/rules/: cli-standards.mdc  python-standards.mdc  sdlc-standards.mdc  style-standards.mdc  testing-standards.mdc
.github/: copilot-instructions.md
.github/workflows/: ci-lint-and-typecheck.yml  ci-test.yml
docs/: README-details.md  plan-2025-09-06-1.md
docs/api/: API-REFERENCE.md
docs/cli/: CLI-REFERENCE.md
docs/notes/: E2E-TEST-COVERAGE-ANALYSIS.md  MIGRATION-TO-2025.1.0.md  MIGRATION-TO-2025.2.0.md
examples/: README.md  api_usage.py
splurge_tabular/: __init__.py  __main__.py  cli.py  common_utils.py  error_codes.py  exceptions.py  protocols.py  streaming_tabular_data_model.py  tabular_data_model.py  tabular_utils.py
splurge_tabular/_vendor/splurge_typer/: __init__.py  cli.py  data_type.py  duck_typing.py  exceptions.py  string.py  type_inference.py
tests/e2e/: test_end_to_end_workflows.py
tests/integration/: test_component_integration.py
tests/property/: test_property_api.py  test_property_negative.py  test_property_typed_view.py  test_property_typed_view_mixed.py
tests/unit/: test_cli.py  test_common_utils.py  test_exceptions.py  test_exceptions_behavior.py  test_protocols.py  test_streaming_tabular_data_model.py  test_tabular_data_model.py  test_tabular_utils.py
