# splurge-tabular

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splurge-tabular"
version = "2025.2.0"
description = "A Python library for tabular data processing with in-memory and streaming support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jim Schilling"},
]
maintainers = [
    {name = "Jim Schilling"},
]
keywords = ["tabular", "data", "csv", "dsv", "delimited", "processing", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jim-schilling/splurge-tabular"
Repository = "https://github.com/jim-schilling/splurge-tabular"
Issues = "https://github.com/jim-schilling/splurge-tabular/issues"
Changelog = "https://github.com/jim-schilling/splurge-tabular/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.0.0",
    "pre-commit>=3.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
splurge-tabular = "splurge_tabular.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["splurge_tabular*"]

[tool.setuptools.dynamic]
version = {attr = "splurge_tabular.__version__"}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]  # assert false

[tool.ruff.lint.isort]
known-first-party = ["splurge_tabular"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-x -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["splurge_typer"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/_vendor/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\):",
    "@(abc\\\\.)?abstractmethod",
]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/_vendor/*",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
# Allow missing imports for vendored/external helper package used at runtime
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["examples.*"]
check_untyped_defs = false
disallow_untyped_defs = false
